RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/36_0008/36_merged.txt
/home/dimpling/AutoSpec/out/36_0008/36_merged.c:69:5: error: unterminated comment
   69 |     /*@;
      |     ^
